pizza/main/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pizza-site
  template:
    metadata:
      labels:
        app: pizza-site
    spec:
      containers:
      - name: pizza-site
        image: pizza-sitefront  # Замените на имя вашего Docker-образа
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
