pizza/main/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pizza-site-service
spec:
  selector:
    app: pizza-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
